# named_types

./: .clang-format  .travis.yml  CMakeLists.txt  README.md  appveyor.yml
cmake/: ProjectGlobalMacros.cmake  ProjectTestFunctions.cmake
docs/doxygen/source/: doxyhtml.conf  doxyxml.conf
docs/sphinx/source/: index.rst
includes/named_tuples/: const_string.hpp  constexpr_string.hpp  introspection.hpp  tuple.hpp  type_info.hpp  type_traits.hpp  visitor.hpp
includes/named_types/: constexpr_string.hpp  named_tag.hpp  named_tuple.hpp  rt_named_tag.hpp  rt_named_tuple.hpp  tuple.hpp
includes/named_types/extensions/: factory.hpp  generation_tools.hpp  parsing_tools.hpp  printf_json_generator.hpp  rapidjson.hpp  type_traits.hpp
includes/named_types/literals/: integral_string_literal.hpp  string_literal.hpp
includes/std/experimental/: tagged.hpp
test/: CMakeLists.txt  demo1.cc  demo1.cpp  demo2.cc  demo2.cpp  demo3.cc  demo4.cc  demo5.cc  demo6.cc  demo7.cc  named_tuple_extensions_tests.cc  named_tuple_generation_tests.cc  named_tuple_rapidjson_tests.cc  named_tuple_tests.cc  named_tuple_tests_cpp1z.cc  unit_tests.cc  unit_tests.cpp
test/examples/: CMakeLists.txt  factory.cc
